--- a/src/main/webapp/setting.html
+++ b/src/main/webapp/setting.html
@@ -51,7 +51,7 @@
                                 <div class="input-group-addon">运行模式</div>
                                 <select class="form-control" id="type">
                                     <option value="1">搜狗CDN（无需配置，默认模式）</option>
-                                    <option value="2" disabled>【下一版加入】新浪CDN（需要账号，推荐使用）</option>
+                                    <option value="2">新浪CDN（需要账号，推荐使用）</option>
                                     <option value="3" disabled>【下一版加入】本地存储（占用空间，保证安全）</option>
                                 </select>
                             </div>
@@ -117,8 +117,8 @@
         $.post("/getConfig",function (data) {
             if (data.code == 1){
                 $("#type").val(data.data.type);
-                $("#SinaUser").val(data.data.SinaUser);
-                $("#SinaPass").val(data.data.SinaPass);
+                $("#SinaUser").val(data.data.sinaUser);
+                $("#SinaPass").val(data.data.sinaPass);
                 $("#admin").val(data.data.admin);
                 $("#key").val(data.data.key);
             } else{
